button value changes to X when clicked using useState

--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   },
   "main": "/index.js",
   "devDependencies": {
+    "eslint": "^8.0.0",
+    "eslint-config-react-app": "^7.0.1",
     "react-scripts": "1.0.0"
   },
   "name": "ljg0t8",
